--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "Auto Tab",
   "version": "1.0",
   "description": "Activates all tabs. Scrolls to all tabs in a window. Scrolls to specific positions.",
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "storage"],
   "action": {
     "default_icon": {
       "16": "icon.png"
